--- a/my-config.org
+++ b/my-config.org
@@ -9,6 +9,34 @@ version control
   (when (file-exists-p secret.el)
     (load secret.el)))
 #+END_SRC
+** OS-based settings
+*** Define Windows paths
+#+BEGIN_SRC emacs-lisp
+(defun set-windows-paths ()
+  (defvar dropbox-path "D:/Dropbox/org"))
+#+END_SRC
+*** Define Linux paths
+#+BEGIN_SRC emacs-lisp
+(defun set-linux-paths ()
+  (defvar dropbox-path "~/Dropbox/org"))
+#+END_SRC
+
+*** Set paths based on OS
+#+BEGIN_SRC emacs-lisp
+(cond
+ ((string-equal system-type "windows-nt")
+  (progn
+    (set-windows-paths)
+    ))
+ ((string-equal system-type "gnu/linux")
+  (progn
+    (set-linux-paths)
+    ))
+ )
+(defvar org-home-file-path (expand-file-name "home.org" dropbox-path))
+(defvar org-work-file-path (expand-file-name "work.org" dropbox-path))
+(defvar org-schedule-file-path (expand-file-name "schedule.org" dropbox-path))
+#+END_SRC
 ** Visuals
 *** Font
 Doom exposes five (optional) variables for controlling fonts in Doom. Here
@@ -96,11 +124,10 @@ numbers are disabled. For relative line numbers, set this to `relative'.
 If you use `org' and don't want your org files in the default location below,
 change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC emacs-lisp
-;;setq org-directory "~/Dropbox/org/")
-(setq org-agenda-files '(
-                         "~/Dropbox/org/home.org"
-                         "~/Dropbox/org/work.org"
-                         ))
+(setq org-agenda-files (list
+                           org-home-file-path
+                           org-work-file-path
+                           ))
 #+END_SRC
 **** Custom commands
 ***** Open agenda files
@@ -110,10 +137,10 @@ change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC emacs-lisp
 (defun mikkpr/open-home-org ()
   (interactive)
-  (find-file "~/Dropbox/org/home.org"))
+  (find-file org-home-file-path))
 (defun mikkpr/open-work-org ()
   (interactive)
-  (find-file "~/Dropbox/org/work.org"))
+  (find-file org-work-file-path))
 #+END_SRC
 
 **** Todo keywords
@@ -133,14 +160,14 @@ change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC emacs-lisp
 (setq org-capture-templates
 '(("p" "Home" entry
-  (file+headline "~/Dropbox/org/home.org" "Inbox")
+  (file+headline org-home-file-path "Inbox")
   "* %?\n%i\nCREATED: %u" :prepend t)
- ("l" "Work log entry" entry (file+olp+datetree+prompt "~/Dropbox/org/work.org" "Log")
+ ("l" "Work log entry" entry (file+olp+datetree+prompt org-work-file-path "Log")
   "* %?\nCREATED: %u" :prepend t :jump-to-captured t)
- ("j" "Journal entry" entry (file+olp+datetree+prompt "~/Dropbox/org/home.org" "Journal")
+ ("j" "Journal entry" entry (file+olp+datetree+prompt org-home-file-path "Journal")
   "* %?\nCREATED: %u" :prepend t :jump-to-captured t)
  ("w" "Work" entry
-  (file+headline "~/Dropbox/org/work.org" "Inbox")
+  (file+headline org-work-file-path "Inbox")
   "* %?\n%i\nCREATED: %u" :prepend t)))
 #+END_SRC
 
@@ -150,7 +177,7 @@ change `org-directory'. It must be set before org loads!
 :END:
 #+BEGIN_SRC emacs-lisp
 (require 'org-gcal)
-(setq org-gcal-file-alist '(("oinasz@gmail.com" .  "~/Dropbox/org/schedule.org")))
+(setq org-gcal-file-alist '(("oinasz@gmail.com" .  org-schedule-file-path)))
 #+END_SRC
 
 **** Org-super-agenda
@@ -198,12 +225,12 @@ change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC emacs-lisp
 (defun mikkpr/org-refile-to-work-log (arg)
   (interactive "P")
-  (org-reverse-datetree-refile-to-file "~/Dropbox/org/work.org" "Log"
+  (org-reverse-datetree-refile-to-file org-work-file-path "Log"
                                        :ask-always arg :prefer '("SCHEDULED" "CREATED_TIME" "CREATED_AT" "CLOSED")))
 
 (defun mikkpr/org-refile-to-journal (arg)
   (interactive "P")
-  (org-reverse-datetree-refile-to-file "~/Dropbox/org/home.org" "Journal"
+  (org-reverse-datetree-refile-to-file org-home-file-path "Journal"
                                        :ask-always arg :prefer '("SCHEDULED" "CREATED_TIME" "CREATED_AT" "CLOSED")))
 #+END_SRC
 
@@ -239,13 +266,13 @@ change `org-directory'. It must be set before org loads!
          ((org-super-agenda-groups
            '((:todo "DONE")
              (:todo t)))
-          (org-agenda-files '("~/Dropbox/org/home.org"))))
+          (org-agenda-files (list org-home-file-path))))
       ("w" "Browse entries in work.org"
          org-ql-block '(level 4)
          ((org-super-agenda-groups
            '((:todo "DONE")
              (:todo t)))
-          (org-agenda-files '("~/Dropbox/org/work.org"))))))
+          (org-agenda-files (list org-work-file-path))))))
 #+END_SRC
 
 **** Org-agenda-property
